test/corpus/main.txt
==================
Template expressions in text and attributes
==================

<template-vars>
  <p>{ message }</p>
  <p>Hello { name }!</p>
  <div title="prefix { title } suffix"></div>
  <div class={ activeClass }></div>
  <div class={{ hoge: true, fuga: true }}></div>
  <a href={url}{path}/ target="_brank">{url}{path}/</a>
  <a href={url}path target=_self></a>
  <a href=api/{version}/users/{id}></a>
  <a href={base || "/"}{path}></a>
  <a href={getUrl("}")}/path></a>
  <div data-value=plain data-query=foo=bar></div>
</template-vars>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (text)
        (riot_expression
          (riot_expression_text))
        (text)
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (quoted_attribute_value
                (quoted_attribute_text)
                (riot_expression
                  (riot_expression_text))
                (quoted_attribute_text)))))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (riot_expression
                  (riot_expression_text))))))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (riot_expression
                  (riot_expression_text))))))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (riot_expression
                  (riot_expression_text))
                (riot_expression
                  (riot_expression_text))
                (unquoted_attribute_text))))
          (attribute
            (attribute_name)
            (attribute_value
              (quoted_attribute_value
                (quoted_attribute_text)))))
        (riot_expression
          (riot_expression_text))
        (riot_expression
          (riot_expression_text))
        (text)
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (riot_expression
                  (riot_expression_text))
                (unquoted_attribute_text))))
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (unquoted_attribute_text)))))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (unquoted_attribute_text)
                (riot_expression
                  (riot_expression_text))
                (unquoted_attribute_text)
                (riot_expression
                  (riot_expression_text))))))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (riot_expression
                  (riot_expression_text))
                (riot_expression
                  (riot_expression_text))))))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (riot_expression
                  (riot_expression_text))
                (unquoted_attribute_text)))))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (unquoted_attribute_text))))
          (attribute
            (attribute_name)
            (attribute_value
              (unquoted_attribute_value
                (unquoted_attribute_text)))))
        (end_tag
          name: (tag_name))))
    (end_tag
      name: (tag_name))))

==================
Tag-like text with non-ASCII names
==================

<tag-like-text>
  <p><タグ></p>
  <p>before <タグ> after</p>
  <p><タグ 属性="値">content</タグ></p>
  <p><-タグ></p>
  <p><tag>element</tag></p>
  <p><-custom>custom element</-custom></p>
</tag-like-text>

---

(source_file
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (element
          (normal_element
            (start_tag
              (tag_name))
            (text)
            (end_tag
              (tag_name))))
        (end_tag
          (tag_name))))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (element
          (normal_element
            (start_tag
              (tag_name))
            (text)
            (end_tag
              (tag_name))))
        (end_tag
          (tag_name))))
    (end_tag
      (tag_name))))

==================
Riot each expressions
==================

<riot-directives>
  <ul>
    <li each={ items }>{ title }</li>
    <li each="{ item, i in items }"></li>
    <li each={ item in items }></li>
    <li each={ entry, index in items.filter(item => item.label.includes(' in ')) }></li>
    <li each={ flag in key in object }></li>
    <li each={ item in items }suffix></li>
    <li each=prefix{ item in items }suffix data-state=entry></li>
    <li each=prefix{ item in items }-{ fallbackItems }suffix data-id=x></li>
    <li each={ item in items }　data-state=wide></li>
    <li each={ item　in　items }　data-state=wide-loop></li>
    <li each=prefix{ item in items } data-state=nbsp></li>
    <li each={ item in items } data-kind=em></li>
    <li each=plain></li>
  </ul>
</riot-directives>

---

(source_file
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_collection_expression)))))
            (riot_expression
              (riot_expression_text))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (quoted_riot_each_expression
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression))
                  (unquoted_attribute_text))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (unquoted_attribute_text)
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression))
                  (unquoted_attribute_text)))
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (unquoted_attribute_text)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (unquoted_attribute_text)
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression))
                  (unquoted_attribute_text)
                  (riot_each_expression
                    (riot_each_collection_expression))
                  (unquoted_attribute_text)))
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (unquoted_attribute_text)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression))))
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (unquoted_attribute_text)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression))))
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (unquoted_attribute_text)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (unquoted_attribute_text)
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression))))
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (unquoted_attribute_text)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (riot_each_expression
                    (riot_each_binding)
                    (riot_each_operator)
                    (riot_each_collection_expression))))
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (unquoted_attribute_text)))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (each_attribute
                (attribute_name)
                (unquoted_riot_each_attribute_value
                  (unquoted_attribute_text))))
            (end_tag
              (tag_name))))
        (end_tag
          (tag_name))))
    (end_tag
      (tag_name))))

==================
Riot class shorthand expressions
==================

<riot-class>
  <ul>
    <li class={ completed: done }>{ title }</li>
    <li class="{ active: item.active, first: i === 0 }"></li>
    <li class={ -active: isActive, "is-disabled": isDisabled, 'is-ready': ready }></li>
    <li class={ item.active ? 'active' : '' }></li>
    <li class={ classes }></li>
    <li class={{ active: isActive }}></li>
    <li class={ selected: item.active ? yes : no, hidden: item.hidden }></li>
    <li class={ getClass(':') }></li>
    <li data-state={ ready: isReady }></li>
  </ul>
</riot-class>

---

(source_file
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_class_expression
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_identifier_name))
                        (riot_class_operator)
                        (riot_class_condition)))))))
            (riot_expression
              (riot_expression_text))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (quoted_attribute_value
                    (riot_class_expression
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_identifier_name))
                        (riot_class_operator)
                        (riot_class_condition))
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_identifier_name))
                        (riot_class_operator)
                        (riot_class_condition)))))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_class_expression
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_identifier_name))
                        (riot_class_operator)
                        (riot_class_condition))
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_string_name))
                        (riot_class_operator)
                        (riot_class_condition))
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_string_name))
                        (riot_class_operator)
                        (riot_class_condition)))))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_expression
                      (riot_expression_text))))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_expression
                      (riot_expression_text))))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_expression
                      (riot_expression_text))))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_class_expression
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_identifier_name))
                        (riot_class_operator)
                        (riot_class_condition))
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_identifier_name))
                        (riot_class_operator)
                        (riot_class_condition)))))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_expression
                      (riot_expression_text))))))
            (end_tag
              (tag_name))))
        (element
          (normal_element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (attribute_value
                  (unquoted_attribute_value
                    (riot_class_expression
                      (riot_class_pair
                        (riot_class_name
                          (riot_class_identifier_name))
                        (riot_class_operator)
                        (riot_class_condition)))))))
            (end_tag
              (tag_name))))
        (end_tag
          (tag_name))))
    (end_tag
      (tag_name))))

==================
Mismatched end tags and recovery
==================

<mismatched-tags>
  <div>before</span>after</div>
  <p>still parsed</p>
</mismatched-tags>

<crossed-tags>
  <div><span>nested</div>
  <p>still parsed</p>
</crossed-tags>

---

(source_file
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (text)
        (erroneous_end_tag
          (erroneous_end_tag_name))
        (text)
        (end_tag
          (tag_name))))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (end_tag
      (tag_name)))
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (element
          (normal_element
            (start_tag
              (tag_name))
            (text)))
        (end_tag
          (tag_name))))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name))))
    (end_tag
      (tag_name))))

==================
Braces in JavaScript lexical constructs
==================

<expression-literals>
  <p>{'}'}</p>
  <p title='{ "}" }'>{ `value: ${format({ suffix: '}' })}` }</p>
  <p>{ /[{}]/.test(value) ? "yes" : "no" /* } */ }</p>
  <p>{ value // }
  }</p>
</expression-literals>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name)
          (attribute
            (attribute_name)
            (attribute_value
              (quoted_attribute_value
                (riot_expression
                  (riot_expression_text))))))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (end_tag
      name: (tag_name))))

==================
Multiple components and comments
==================

<!-- top level comment -->
<first-component>
  <p>{ first }</p>
</first-component>

<second-component>
  <!-- inner comment -->
  <p>{ second }</p>
</second-component>

---

(source_file
  (comment)
  (component
    (start_tag
      name: (tag_name))
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (end_tag
      name: (tag_name)))
  (component
    (start_tag
      name: (tag_name))
    (comment)
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (end_tag
      name: (tag_name))))

==================
Void and self-closing elements
==================

<test-component>
  <input value={ user.name }>
  <input/>
  <input type="text"/>
  <input value={ '/>' }/>
  <input value={ user.name } />
  <custom-element/>
  <p>{ message }</p>
</test-component>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (element
      (void_element
        name: (tag_name)
        (attribute
          (attribute_name)
          (attribute_value
            (unquoted_attribute_value
              (riot_expression
                (riot_expression_text)))))))
    (element
      (self_closing_element
        name: (tag_name)))
    (element
      (self_closing_element
        name: (tag_name)
        (attribute
          (attribute_name)
          (attribute_value
            (quoted_attribute_value
              (quoted_attribute_text))))))
    (element
      (self_closing_element
        name: (tag_name)
        (attribute
          (attribute_name)
          (attribute_value
            (unquoted_attribute_value
              (riot_expression
                (riot_expression_text)))))))
    (element
      (self_closing_element
        name: (tag_name)
        (attribute
          (attribute_name)
          (attribute_value
            (unquoted_attribute_value
              (riot_expression
                (riot_expression_text)))))))
    (element
      (self_closing_element
        name: (tag_name)))
    (element
      (normal_element
        (start_tag
          name: (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          name: (tag_name))))
    (end_tag
      name: (tag_name))))

==================
Script element
==================

<script-component>
  <script>
    const state = { count: 0 }
    const ok = count < 10
  </script>
</script-component>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (script_element
      (script_start_tag
        name: (tag_name))
      (script_body
        (javascript_text))
      (script_end_tag
        (tag_name)))
    (end_tag
      name: (tag_name))))

==================
Division before script end tag
==================

<inline-script>
  <script>const ratio = total / count</script>
</inline-script>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (script_element
      (script_start_tag
        name: (tag_name))
      (script_body
        (javascript_text))
      (script_end_tag
        (tag_name)))
    (end_tag
      name: (tag_name))))

==================
Riot method definition in script element
==================

<script-methods>
  <script>
    const before = true
    handleClick(event) {
      const options = {
        enabled: true
      }
      return options
    };
    self.handleRefButton = () => {
      return before
    };
  </script>
</script-methods>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (script_element
      (script_start_tag
        name: (tag_name))
      (script_body
        (javascript_text)
        (riot_method_definition
          name: (riot_method_name)
          parameters: (riot_method_parameters)
          body: (riot_method_body))
        (javascript_text))
      (script_end_tag
        (tag_name)))
    (end_tag
      name: (tag_name))))

==================
Riot async and generator method definitions
==================

<script-method-modifiers>
  <script>
    async loadData() {
      return await fetch('/data')
    }
    *items() {
      yield 1
    }
  </script>
</script-method-modifiers>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (script_element
      (script_start_tag
        name: (tag_name))
      (script_body
        (riot_method_definition
          modifier: (riot_method_modifier)
          name: (riot_method_name)
          body: (riot_method_body))
        (riot_method_definition
          modifier: (riot_method_modifier)
          name: (riot_method_name)
          body: (riot_method_body)))
      (script_end_tag
        (tag_name)))
    (end_tag
      name: (tag_name))))

==================
Riot multiline method signatures
==================

<multiline-method-signatures>
  <script>
    async
    loadData
    (source = ')')
    {
      return source
    }
    *
    items() {
      yield 1
    }
    $save_1
    (event) {
      return event
    }
  </script>
</multiline-method-signatures>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (script_element
      (script_start_tag
        name: (tag_name))
      (script_body
        (riot_method_definition
          modifier: (riot_method_modifier)
          name: (riot_method_name)
          parameters: (riot_method_parameters)
          body: (riot_method_body))
        (riot_method_definition
          modifier: (riot_method_modifier)
          name: (riot_method_name)
          body: (riot_method_body))
        (riot_method_definition
          name: (riot_method_name)
          parameters: (riot_method_parameters)
          body: (riot_method_body)))
      (script_end_tag
        (tag_name)))
    (end_tag
      name: (tag_name))))

==================
JavaScript constructs excluded from Riot methods
==================

<non-riot-methods>
  <script>
    if (ready) {
      update()
    }
    function declared() {
      return true
    }
    self.arrow = () => {
      return false
    }
    invalid((value)) {
      return value
    }
    const string = 'fake() {'
    const template = `
      fake() {}
    `
    const regex = /fake\(\) \{/
    // commented() {
    /*
      blocked() {
    */
  </script>
</non-riot-methods>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (script_element
      (script_start_tag
        name: (tag_name))
      (script_body
        (javascript_text))
      (script_end_tag
        (tag_name)))
    (end_tag
      name: (tag_name))))

==================
Braces in Riot method body
==================

<method-body-braces>
  <script>
    parse(value = ')') {
      const object = { close: '}' }
      const regex = /}/
      const template = `${ { close: '}' } }`
      // }
      /* } */
      return /}/.test(value) ? object : null
    }
  </script>
</method-body-braces>

---

(source_file
  (component
    (start_tag
      name: (tag_name))
    (script_element
      (script_start_tag
        name: (tag_name))
      (script_body
        (riot_method_definition
          name: (riot_method_name)
          parameters: (riot_method_parameters)
          body: (riot_method_body)))
      (script_end_tag
        (tag_name)))
    (end_tag
      name: (tag_name))))

==================
Open syntax component script
==================

<open-syntax>
  <p>{ message }</p>
  this.message = 'hello'
</open-syntax>

<script-only>
  this.count = 0
</script-only>

<open-syntax-with-style>
  <p>{ message }</p>
  this.message = 'hello'
  <style>
    p { color: red; }
  </style>
</open-syntax-with-style>

<open-syntax-with-script>
  <p>{ message }</p>
  this.message = 'hello'
  <script>
    this.ready = true
  </script>
</open-syntax-with-script>

---

(source_file
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          (tag_name))))
    (component_script
      (javascript_text))
    (end_tag
      (tag_name)))
  (component
    (start_tag
      (tag_name))
    (component_script
      (javascript_text))
    (end_tag
      (tag_name)))
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          (tag_name))))
    (component_script
      (javascript_text))
    (css_style_element
      (css_style_start_tag
        (tag_name))
      (raw_text)
      (style_end_tag
        (tag_name)))
    (end_tag
      (tag_name)))
  (component
    (start_tag
      (tag_name))
    (element
      (normal_element
        (start_tag
          (tag_name))
        (riot_expression
          (riot_expression_text))
        (end_tag
          (tag_name))))
    (component_script
      (javascript_text))
    (script_element
      (script_start_tag
        (tag_name))
      (script_body
        (javascript_text))
      (script_end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================
Riot method definition in open syntax component script
==================

<open-syntax-method>
  <p>{ message }</p>
  handleClick(event) {
    return event
  }
  self.handleRefButton = () => {
    return true
  }
</open-syntax-method>

---
